<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ScrollView
        android:layout_width="408dp"
        android:layout_height="652dp"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="14sp"
            android:paddingRight="14sp"
            android:paddingBottom="10sp">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="An Overview"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:text="@string/overview"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingTop="20sp"
                android:text="Our Success Story"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:text="@string/story"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingTop="20sp"
                android:text="Our Team"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="147dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/founder" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/owner" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/marketer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloochettan2_regular"
                    android:gravity="start"
                    android:paddingLeft="8sp"
                    android:text="Biswamangal Das"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloochettan2_regular"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:paddingLeft="25sp"
                    android:text="Karunavtar Das"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloochettan2_regular"
                    android:paddingLeft="25sp"
                    android:text="Sachi Jivan Das"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="364dp"
                android:layout_height="14dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloochettan2_regular"
                    android:paddingLeft="38sp"
                    android:text="Founder"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloochettan2_regular"
                    android:paddingLeft="55sp"
                    android:text="Owner, Food Creator"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloochettan2_regular"
                    android:paddingLeft="8sp"
                    android:text="Digital Designer, Marketer"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:paddingTop="25sp"
                android:text="Come On In!"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingRight="5sp"
                android:text="10 AM - 11 PM (7 Days a Week)"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:paddingLeft="15sp"
                android:paddingTop="35sp"
                android:paddingBottom="10sp"
                android:text="Contact:"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="Phone:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="+(91) 9658 481 481"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="Mail:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="pamho@karunakitchen.in"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="Address:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="@string/mayapur"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="@string/vrindavan"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="@string/dharamshala"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="@string/chd"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="15sp"
                android:paddingTop="15sp"
                android:paddingRight="15sp"
                android:text="@string/website"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/orange"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>